--- a/wish-list/src/styles/app.css
+++ b/wish-list/src/styles/app.css
@@ -12,8 +12,9 @@
   font-size: 14px;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  background: #848c77;
+  flex-direction: column;
+  align-items: center;
+  background: #53736A;
 }
 .wish-list {
   width: 80%;
@@ -23,9 +24,10 @@
 }
 .title {
   margin: 20px 0;
-  color: #bfbfb8;
+  color: #C2C0A6;
   font-size: 45px;
   font-weight: 900;
+  text-align: center;
 }
 /* .input-form,
 .post-list {
@@ -47,4 +49,18 @@
   margin-top: 20px;
   font-family: inherit;
   font-weight: 300;
+}
+.navbar{
+    display: flex;
+  justify-content: space-around;
+  width: 100%;
+  text-decoration: none;
+  background-color: #024554;
+  height: 10vh;
+  align-items: center;
+}
+.navLink{
+  text-decoration: none;
+  color: #F2F2EB;
+  font-size:medium;
 }
