--- a/wish-list/src/styles/wishList.scss
+++ b/wish-list/src/styles/wishList.scss
@@ -10,7 +10,7 @@
 .wish-list__items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr 1fr;
+  // grid-template-rows: 1fr 1fr 1fr;
   gap: 2.5% 5%;
   margin: 0 5% 5% 5%;
   .wish-item {
